# ContataArtifactEvaluation

./: .gitignore  LICENSE  Makefile  README.md  angelic-synthesizer.opam  contata.opam  core-and-more.opam  cta_impl.opam  dune-project  generate-data.py  timbuk-simple.opam  transform-data.py
angelic-synthesizer/: AngelicEval.ml  AngelicSketchFTASynthesizer.ml  Automaton.ml  ContextLanguage.ml  FTAConstructor.ml  FTACreator.ml  dune  lexer.mll
app/: ContataCmdLine.ml  dune
benchmarks/ds/: bst_insertion.mls  list_insertion.mls  list_insertion2.mls  list_insertion3.mls  list_removal.mls  list_removal2.mls  list_sort.mls  mirror_ternary_test.mls  mirror_ternary_test2.mls  mirror_tree_test.mls  mirror_tree_test2.mls  sized_list.mls
benchmarks/mutrec/: even_odd.mls  even_odd2.mls  evens_odds.mls  nested_list_eq.mls  parenthesis_match.mls  tree_forest_leaves.mls  tree_forest_size.mls
benchmarks/reccomp/: binary_tree_depth.mls  binary_tree_eq.mls  list_cmp.mls  list_eq.mls  ternary_tree_depth.mls  ternary_tree_eq.mls  trie_eq.mls
benchmarks/stackoverflow/: list_rev_twice.mls  pairs.mls  split_on.mls  zip_same_len.mls
core-and-more/: HashtblWrapper.ml  RoseTree.ml  datastructures.ml  my_memoizer.ml  util.ml
cta-impl/: Automaton.ml  Configuration.ml  Logic.ml  State.ml  Symbol.ml  Term.ml  TermState.ml  TermStateSemiring.ml  Transition.ml  dune
lib/: AngelicEval.ml  AutomatonCreator.ml  ContataLang.ml  ContataLangFTASynthesizer.ml  Context.ml  ContextLanguage.ml  EnumerativeVerifier.ml  Eval.ml  FTAConstructor.ml  FTACreator.ml  FormulaExtractor.ml  GroundSketches.ml  Lang.ml  Language.ml  Log.ml  Param.ml  Problem.ml  SafeEval.ml  SimpleSketchFTASynthesizer.ml  Sketch.ml  SketchFTASynthesizer.ml  Spec.ml  Synthesizers.ml  Type.ml  Typecheck.ml  UFForm.ml  UniversalFormula.ml  consts.ml  dune  lexer.mll  parser.mly
timbuk-simple/: Term.ml  TermState.ml  TermStateSemiring.ml  automaton.ml  dune
