opam-version: "2.0"
name: "timbuk-simple"
version: "0.0.1"
         author: "Anders Miltner"
maintainer: "Anders.Miltner@gmail.com"
license: "MIT"
synopsis: "Timbuk implementation of tree automata, simplified a bit"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.12.0" }
  "dune" { >= "2.9.0" }
  "core" { >= "v0.14.1" }
  "ppx_deriving" { >= "4.5" }
  "ppx_hash" { >= "v0.14.0" }
  "posix-math" { >= "0.3.1-0" }

]
tags: [ "stdlib" "containers" ]
homepage: "https://github.com/amiltner/ContataArtifactEvaluation"
dev-repo: "git+https://github.com/amiltner/ContataArtifactEvaluation.git"
bug-reports: "https://github.com/amiltner/ContataArtifactEvaluation/issues"
