(env
    (debug (ocamlopt_flags (:standard -g -Oclassic)))
    (_ (ocamlopt_flags (:standard -O3 -rounds 6))))

(executable
    (name ContataCmdLine)
    (preprocess (pps ppx_bin_prot ppx_hash ppx_deriving.std ppx_let ppx_optcomp ppx_compare ppx_sexp_conv))
 (libraries contata core-and-more core_unix.command_unix angelic-synthesizer))
