(env
    (debug (ocamlopt_flags (:standard -g -Oclassic)))
    (_ (ocamlopt_flags (:standard -O3 -rounds 6))))

(library
    (name TimbukSimple)
    (public_name timbuk-simple)
    (libraries core-and-more)
    (preprocess (pps ppx_bin_prot ppx_hash ppx_deriving.std ppx_let ppx_optcomp ppx_compare ppx_sexp_conv
    ;export OCAML_LANDMARKS=auto,format=json,output=lm.json
    )))
